--- a/packages/app/index.html
+++ b/packages/app/index.html
@@ -1,12 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="/tarteaucitron/tarteaucitron.min.js"></script>
+    <script type="text/javascript">
+      tarteaucitron.init({
+        "privacyUrl": "", /* Privacy policy url */
+        "bodyPosition":
+          "top", /* top to bring it as first element for accessibility */
+
+        "hashtag":
+          "#tarteaucitron", /* Open the panel with this hashtag */
+        "cookieName": "tarteaucitron", /* Cookie name */
+
+        "orientation": "middle", /* Banner position (top - bottom) */
+
+        "groupServices": true, /* Group services by category */
+        "showDetailsOnClick":
+          true, /* Click to expand the description */
+        "serviceDefaultState":
+          "wait", /* Default state (true - wait - false) */
+
+        "showAlertSmall":
+          false, /* Show the small banner on bottom right */
+        "cookieslist": false, /* Show the cookie list */
+
+        "closePopup": false, /* Show a close X on the banner */
+
+        "showIcon": false, /* Show cookie icon to manage cookies */
+        "iconSrc":
+          "/logo.png", /* Optionnal: URL or base64 encoded image */
+        "iconPosition":
+          "BottomRight", /* Position of the cookie (BottomRight - BottomLeft - TopRight - TopLeft) */
+
+        "adblocker":
+          false, /* Show a Warning if an adblocker is detected */
+
+        "DenyAllCta": true, /* Show the deny all button */
+        "AcceptAllCta": true, /* Show the accept all button */
+        "highPrivacy":
+          true, /* HIGHLY RECOMMANDED Disable auto consent */
+        "alwaysNeedConsent":
+          false, /* Ask the consent for "Privacy by design" services */
+
+        "handleBrowserDNTRequest":
+          false, /* If Do Not Track == 1, disallow all */
+
+        "removeCredit": true, /* Remove credit link */
+        "moreInfoLink": true, /* Show more info link */
+
+        "useExternalCss":
+          false, /* Expert mode: do not load the tarteaucitron.css file */
+        "useExternalJs":
+          false, /* Expert mode: do not load the tarteaucitron js files */
+
+        //"cookieDomain": ".my-multisite-domaine.fr", /* Shared cookie for multisite */
+
+        "readmoreLink": "", /* Change the default readmore link */
+
+        "mandatory": true, /* Show a message about mandatory cookies */
+        "mandatoryCta":
+          false, /* Show the disabled accept button when mandatory on */
+
+        //"customCloserId": "", /* Optional a11y: Custom element ID used to open the panel */
+
+        "googleConsentMode":
+          true, /* Enable Google Consent Mode v2 for Google ads & GA4 */
+        "bingConsentMode":
+          true, /* Enable Bing Consent Mode for Clarity & Bing Ads */
+        "softConsentMode":
+          false, /* Soft consent mode (consent is required to load the services) */
+
+        "dataLayer":
+          false, /* Send an event to dataLayer with the services status */
+        "serverSide":
+          false, /* Server side only, tags are not loaded client side */
+
+        "partnersList":
+          true, /* Show the number of partners on the popup/middle banner */
+      });
+    </script>
+    <script>
+      tarteaucitron.user.gtagUa = "%VITE_GOOGLE_ANALYTICS_ID%";
+      // tarteaucitron.user.gtagCrossdomain = ['example.com', 'example2.com'];
+      tarteaucitron.user.gtagMore = function () {
+        /* add here your optionnal gtag() */
+      };
+      (tarteaucitron.job = tarteaucitron.job || []).push("gtag");
+    </script>
+
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="src/styles/index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NanoAPI</title>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
